# nuon-ext-gen-readme

./: README.md  nuon-ext.toml  pyproject.toml
src/nuon_ext_gen_readme/: cli.py  diagram.py  inputs.py  secrets.py
