[project]
name = "nuon-ext-gen-readme"
version = "0.1.0"
description = "Generate markdown documentation from Nuon app configuration files"
readme = "README.md"
authors = [
    { name = "fidiego", email = "sayheytofred@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich",
    "tomli",
    "click",
]

[project.scripts]
nuon-ext-gen-readme = "nuon_ext_gen_readme.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
